REFACTOR | Organize and Comment CSS to be more clear, organized and readable

--- a/html__v2/home.html
+++ b/html__v2/home.html
@@ -179,7 +179,6 @@
             <div class="faq__question">
               <div class="faq__container">
                 <div class="faq__wrapper">
-                  <!-- <div class="faq__number">01</div> -->
                   <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
                   </div>
                 </div>
@@ -247,7 +246,7 @@
         <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
         <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
       </div>
-      <button class="btn btn--icon cta instagram__btn instagram__btn--mobile ">
+      <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto">
         <span>@jessie</span>
         <img src="../assets/svg/arrow.svg" alt="arrow">
       </button>
