ADD | Portfolio section's structure done

--- a/html__v2/services_page.html
+++ b/html__v2/services_page.html
@@ -62,8 +62,8 @@
 
 
   <main class="services flow">
-    <section class="container services__header">
-      <h1 class="header-title services__header-title">Services</h1>
+    <section class="header header--services">
+      <h1 class="header__title">Services</h1>
     </section>
 
     <!-- service content -->
