--- a/html/about_page.html
+++ b/html/about_page.html
@@ -5,15 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🌟See Jessie's makeup and hairstyles for wedding</title>
+  <title>🌟About me</title>
   <link rel="stylesheet" href="../components.css">
-  <script src="../components.js" defer></script>
+
+
 </head>
 
 <body>
-  <!-- style: mobile first -->
-  <!-- writing html: desktop first(desktop html has the most complexity) -->
-  <!-- used what we already have in the custom properties and utility classes -->
   <header>
     <nav class="navbar hidden navbar--desktop">
       <div class="container inline-padding container--navbar">
@@ -63,29 +61,107 @@
   </header>
 
 
-  <main class="portfolio flow">
-    <section class="hero-header hero-header--portfolio">
-      <h1 class="hero-header__title">Portfolio</h1>
+  <main class="about-page flow">
+    <section class="hero-header hero-header--about">
+      <h1 class="hero-header__title">About Me</h1>
     </section>
 
-    <!-- gallery -->
-    <section class="gallery container inline-padding">
-      <div class="gallery__grid">
+    <section class="container inline-padding about__heading">
+      <h2 class="about__title">Work with the world class specialist</h2>
+      <div>
+        <div class="about__text">
+          <p>3 Sentence Intro about Sister</p>
+          <p>- when is your journey started</p>
+          <p>- why and how do you choose makeup as a profession</p>
+          <p>- what have you achieved? whatkind of style you learnt? what you have learnt from other</p>
+        </div>
+        <div class="about__labelname about__labelname--first">
+          <p class="about__number">100+</p>
+          <span class="about__label uppercase">Happy Clients</span>
+        </div>
+        <div class="about__labelname">
+          <p class="about__number">5+</p>
+          <span class="about__label uppercase">Years of experience</span>
+        </div>
       </div>
-
     </section>
 
 
-
-    <!-- media playing here -->
-    <section class="portfolio__video inline-padding">
-      <div class="background-video">
-        <video class="video" autoplay loop muted>
-          <source src="../assets/video/short2.mp4" type="video/mp4" />
-        </video>
+    <section class="reasons">
+      <div class="container--reasons">
+        <div class="reasons__side">
+          <div class="reasons__img-container">
+            <img src="../assets/images/header__img.jpg" alt="">
+          </div>
+        </div>
+        <div class="reasons__main inline-padding">
+          <h2 class="reasons__title">Work with the world class specialist</h2>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+          <div>
+            <p class="reasons__number">01/</p>
+            <h4 class="reasons__reason text--large">
+              Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </h4>
+          </div>
+        </div>
       </div>
     </section>
 
+    <section class="portfolio--secondary container inline-padding">
+      <div class="portfolio__text-container">
+        <h2 class="portfolio__title text-center heading-3">My clients</h2>
+        <button class="btn btn--icon cta portfolio__btn portfolio__btn--desktop">
+          <span>See portfolio</span>
+          <img src="../assets/svg/arrow.svg" alt="arrow">
+        </button>
+      </div>
+      <div class="portfolio__images">
+        <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
+        <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
+      </div>
+      <button class="btn btn--icon cta portfolio__btn portfolio__btn--mobile">
+        <span>See portfolio</span>
+        <img src="../assets/svg/arrow.svg" alt="arrow">
+      </button>
+    </section>
 
     <section class="instagram container">
       <div class="inline-padding instagram__text-container">
@@ -105,8 +181,10 @@
         <span>@jessie</span>
         <img src="../assets/svg/arrow.svg" alt="arrow">
       </button>
+
     </section>
   </main>
+
   <footer class="footer container inline-padding">
     <hr class="footer__line">
     <div class="footer__container">
@@ -144,7 +222,7 @@
       </section>
     </div>
   </footer>
-
+  <script src="../components.js"></script>
 </body>
 
 </html>
