ADD | 11ty and nunjucks setup done

--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
       </section>
       <ul class="navbar__list">
         <li class="navbar__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="navbar__item">
-          <a href="/portfolio_page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="navbar__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </ul>
     </div>
@@ -45,20 +45,20 @@
     <ul class="container inline-padding menu">
       <div class="menu__container">
         <li class="menu__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="menu__item">
-          <a href="/portfolio__page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="menu__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </div>
     </ul>
   </nav>
 </header>
-  <main class="flow">
-    
+  <main class="home-page flow">
+  
 
 <section class="hero container">
   <img class="hero__image" src="../assets/images/header__img.jpg" alt="<header description>">
@@ -232,7 +232,7 @@
     </ul>
   </div>
 </section>
-    <section class="instagram container">
+  <section class="instagram container">
   <div class="inline-padding instagram__text-container">
     <h2 class="instagram__title">Follow me on Instagram</h2>
     <button class="btn btn--icon cta instagram__btn instagram__btn--desktop">
@@ -252,20 +252,20 @@
   </button>
 
 </section>
-  </main>
+</main>
   <footer class="footer container inline-padding">
   <hr class="footer__line">
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
-          <a href="/services_page.html">Services</a>
+          <a href="/service">Services</a>
         </li>
         <li class="footer-section__item">
-          <a href="/portfolio_page.html">Portfolio</a>
+          <a href="/portfolio">Portfolio</a>
         </li>
         <li class="footer-section__item">
-          <a href="/about_page.html">About Me</a>
+          <a href="/about">About Me</a>
         </li>
       </ul>
     </section>
@@ -273,23 +273,24 @@
       <ul class="footer-section__list socials__list">
         <li class="footer-section__item">
           <a href="#" class="socials__link instagram">
-            <img src="../assets/svg/instagram.svg" alt="Connect with me on Instagram">
+            <img src="/assets/svg/instagram.svg" alt="Connect with me on Instagram">
           </a>
         </li>
         <li class="footer-section__item">
           <a href="#" class="socials__link messenger">
-            <img src="../assets/svg/messenger.svg" alt="Connect with me on Messenger">
+            <img src="/assets/svg/messenger.svg" alt="Connect with me on Messenger">
           </a>
         </li>
         <li class="footer-section__item">
           <a href="#" class="socials__link whatsapp">
-            <img src="../assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
+            <img src="/assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
           </a>
         </li>
       </ul>
     </section>
   </div>
 </footer>
+  <script src="/app.js"></script>
 </body>
 
 </html>
