ADD | Scrolling navbar animation issue + Contact me link

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
         <li class="navbar__item">
           <a href="/about">About Me</a>
         </li>
+        <li class="navbar__item">
+          <a href="#contact">Contact Me</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -53,6 +56,9 @@
         <li class="menu__item">
           <a href="/about">About Me</a>
         </li>
+        <li class="menu__item">
+          <a href="#contact">Contact Me</a>
+        </li>
       </div>
     </ul>
   </nav>
@@ -69,10 +75,9 @@
       <h1>to life.</h1>
     </div>
     <div class="hero__subheading">
-      <p class="uppercase">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, quia officia veritatis
-      </p>
+      <p class="uppercase">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore .</p>
       <button class="btn btn--icon cta">
-        <span>Button</span>
+        <span>Connect with me</span>
         <img src="../assets/svg/arrow.svg" alt="arrow">
       </button>
     </div>
@@ -81,9 +86,7 @@
 
 <section class="hero-two">
   <div class="container inline-padding container--hero-two">
-    <h2 class="hero-two__description">Soft, sexy, classy, romantic or bold look? It doesn't matter which style
-      you're looking for.
-      We make it modern, we make it yours. </h2>
+    <h2 class="hero-two__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
     <img class="hero-two__image" src="../assets/images/header__img.jpg" alt="<header description>">
   </div>
 </section>
@@ -91,7 +94,7 @@
 <section class="services">
   <div class="container inline-padding">
     <div class="flex">
-      <h2>I do makeup for</h2>
+      <h2>I do makeup for:</h2>
       <button class="btn btn--icon services__btn--desktop">
         <span>Button</span>
         <img src="../assets/svg/arrow.svg" alt="arrow">
@@ -110,7 +113,7 @@
         <img class="services__card-image" src="../assets/images/header__img.jpg" alt="<header description>">
         <hr>
         <div class="services__card-description">
-          <span class="services__card-number">01/</span>
+          <span class="services__card-number">02/</span>
           <span class="services__card-title">wedding look</span>
         </div>
       </div>
@@ -118,13 +121,13 @@
         <img class="services__card-image" src="../assets/images/header__img.jpg" alt="<header description>">
         <hr>
         <div class="services__card-description">
-          <span class="services__card-number">01/</span>
+          <span class="services__card-number">03/</span>
           <span class="services__card-title">wedding look</span>
         </div>
       </div>
     </section>
     <button class="btn btn--icon cta services__btn--mobile">
-      <span>Button</span>
+      <span>See All Services</span>
       <img src="../assets/svg/arrow.svg" alt="arrow">
     </button>
   </div>
@@ -199,7 +202,6 @@
         <div class="faq__question">
           <div class="faq__container">
             <div class="faq__wrapper">
-              <!-- <div class="faq__number">01</div> -->
               <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
               </div>
             </div>
@@ -216,7 +218,6 @@
         <div class="faq__question">
           <div class="faq__container">
             <div class="faq__wrapper">
-              <!-- <div class="faq__number">01</div> -->
               <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
               </div>
             </div>
@@ -229,6 +230,23 @@
           </div>
         </div>
       </li>
+      <li class="faq__item" aria-expanded="false">
+        <div class="faq__question">
+          <div class="faq__container">
+            <div class="faq__wrapper">
+              <div class="faq__title">Question 1: Lorem ipsum dolor sit amet
+              </div>
+            </div>
+            <div class="faq__icon">
+              <img src="../assets/svg/add.svg" alt="expand">
+            </div>
+          </div>
+          <div class="faq__answer">
+            <p>Hello world</p>
+          </div>
+        </div>
+      </li>
+
     </ul>
   </div>
 </section>
@@ -253,13 +271,13 @@
 
 </section>
 </main>
-  <footer class="footer container inline-padding">
+  <footer id="contact" class="footer container inline-padding">
   <hr class="footer__line">
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
-          <a href="/service">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="footer-section__item">
           <a href="/portfolio">Portfolio</a>
