--- a/public/about/index.html
+++ b/public/about/index.html
@@ -28,6 +28,9 @@
         <li class="navbar__item">
           <a href="/about">About Me</a>
         </li>
+        <li class="navbar__item">
+          <a href="#contact">Contact Me</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -52,6 +55,9 @@
         </li>
         <li class="menu__item">
           <a href="/about">About Me</a>
+        </li>
+        <li class="menu__item">
+          <a href="#contact">Contact Me</a>
         </li>
       </div>
     </ul>
@@ -180,13 +186,13 @@
 
 </section>
 </main>
-  <footer class="footer container inline-padding">
+  <footer id="contact" class="footer container inline-padding">
   <hr class="footer__line">
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
         <li class="footer-section__item">
-          <a href="/service">Services</a>
+          <a href="/services">Services</a>
         </li>
         <li class="footer-section__item">
           <a href="/portfolio">Portfolio</a>
