MODIFIED | Make font consistent

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -147,7 +147,7 @@
 
 <section class="portfolio--secondary container inline-padding">
   <div class="portfolio__text-container">
-    <h2 class="portfolio__title text-center heading-3">My clients</h2>
+    <h2 class="portfolio__title text-center">My clients</h2>
     <button class="btn btn--icon cta portfolio__btn portfolio__btn--desktop">
       <span>See portfolio</span>
       <img src="../assets/svg/arrow.svg" alt="arrow">
@@ -179,7 +179,7 @@
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
   </div>
-  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto">
+  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
     <span>@jessie</span>
     <img src="../assets/svg/arrow.svg" alt="arrow">
   </button>
@@ -191,6 +191,9 @@
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
+        <li class="footer-section__item">
+          <a href="/index.html">Home</a>
+        </li>
         <li class="footer-section__item">
           <a href="/services">Services</a>
         </li>
@@ -223,6 +226,8 @@
     </section>
   </div>
 </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="/app.js"></script>
 </body>
 
