--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -181,7 +181,7 @@
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
   </div>
-  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto">
+  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
     <span>@jessie</span>
     <img src="../assets/svg/arrow.svg" alt="arrow">
   </button>
@@ -193,6 +193,9 @@
   <div class="footer__container">
     <section class="footer-section">
       <ul class="footer-section__list">
+        <li class="footer-section__item">
+          <a href="/index.html">Home</a>
+        </li>
         <li class="footer-section__item">
           <a href="/services">Services</a>
         </li>
@@ -225,6 +228,8 @@
     </section>
   </div>
 </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="/app.js"></script>
 </body>
 
