--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
       </ul>
     </section>
     <section class="footer-section socials__section">
-      <ul class="footer-section__list socials__list">
+      <ul class="socials__list">
         <li class="footer-section__item">
           <a href="#" class="socials__link instagram">
             <img src="/assets/svg/instagram.svg" alt="Connect with me on Instagram">
