UPDATE | Styling fix + animation added

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -66,7 +66,9 @@
   <main class="services-page flow">
   
 <section class="hero-header hero-header--services">
-  <h1 class="hero-header__title container inline-padding">Services</h1>
+  <div class="hero-header__title-container container inline-padding">
+    <h1 class="hero-header__title animatedObj">About Me</h1>
+  </div>
 </section>
 
 <!-- service content -->
@@ -201,7 +203,7 @@
   </button>
 </section>
   <section class="instagram container">
-  <div class="inline-padding instagram__text-container">
+  <div class="inline-padding instagram__text-container animatedObj">
     <h2 class="instagram__title">Follow me on Instagram</h2>
     <button class="btn btn--icon cta instagram__btn instagram__btn--desktop">
       <span>@jessie</span>
@@ -214,10 +216,12 @@
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
     <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
   </div>
-  <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
-    <span>@jessie</span>
-    <img src="../assets/svg/arrow.svg" alt="arrow">
-  </button>
+  <div class="inline-padding btn-container">
+    <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
+      @jessie
+      <img src="../assets/svg/arrow.svg" alt="arrow">
+    </button>
+  </div>
 
 </section>
 </main>
