MODIFIED | Shrink the image size and add lazy loading

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="preload" href="/style.css" as="style" />
+  <link rel="preload" href="/app.js" as="script" />
+
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
@@ -67,7 +70,7 @@
   
 <section class="hero-header hero-header--services">
   <div class="hero-header__title-container container inline-padding">
-    <h1 class="hero-header__title animatedObj">About Me</h1>
+    <h1 class="hero-header__title animatedObj">Services</h1>
   </div>
 </section>
 
@@ -191,11 +194,11 @@
     </button>
   </div>
   <div class="portfolio__images">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.jpg" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="/assets/images/header__img.webp" alt="">
   </div>
   <button class="btn btn--icon cta portfolio__btn portfolio__btn--mobile">
     <span>See portfolio</span>
@@ -211,10 +214,10 @@
     </button>
   </div>
   <div class="instagram__images">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
   </div>
   <div class="inline-padding btn-container">
     <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
