--- a/public/about/index.html
+++ b/public/about/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="preload" href="/style.css" as="style" />
+  <link rel="preload" href="/app.js" as="script" />
+
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
@@ -96,7 +99,7 @@
   <div class="container container--reasons">
     <div class="reasons__side">
       <div class="reasons__img-container">
-        <img src="../assets/images/header__img.jpg" alt="">
+        <img src="../assets/images/header__img.webp" alt="">
       </div>
     </div>
     <div class="reasons__main inline-padding">
@@ -156,11 +159,11 @@
     </button>
   </div>
   <div class="portfolio__images">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
-    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.jpg" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.webp" alt="">
+    <img class="portfolio__image portfolio__image--desktop" src="../assets/images/header__img.webp" alt="">
   </div>
   <button class="btn btn--icon cta portfolio__btn portfolio__btn--mobile">
     <span>See portfolio</span>
@@ -176,10 +179,10 @@
     </button>
   </div>
   <div class="instagram__images">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
   </div>
   <div class="inline-padding btn-container">
     <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
