--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="preload" href="/style.css" as="style" />
+  <link rel="preload" href="/app.js" as="script" />
+
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
@@ -67,7 +70,7 @@
   
 
 <section class="hero container">
-  <img class="hero__image" src="../assets/images/header__img.jpg" alt="<header description>">
+  <img class="hero__image" src="../assets/images/header__img.webp" alt="<header description>">
   <div class="container container--hero">
     <div class="hero__heading">
       <h1>Bring your</h1>
@@ -88,7 +91,7 @@
   <div class="container inline-padding container--hero-two">
     <h2 class="hero-two__description">Soft, sexy, classy, romantic or bold look? It doesn&#39;t matter which style you&#39;re looking for. We make it modern, we make it yours.</h2>
     <div class="hero-two__image-wrapper animatedObj">
-      <img class="hero-two__image" src="../assets/images/header__img.jpg" alt="<header description>">
+      <img class="hero-two__image" src="../assets/images/header__img.webp" alt="<header description>">
       <div class="hero-two__image-cover"></div>
     </div>
   </div>
@@ -106,7 +109,7 @@
     <section class="services__cards">
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -117,7 +120,7 @@
       </div>
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -128,7 +131,7 @@
       </div>
       <div class="services__card ">
         <div class="services__card-image-wrapper">
-          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.jpg"
+          <img loading="lazy" class="services__card-image" src="../assets/images/header__img.webp"
             alt="<header description>">
         </div>
         <hr>
@@ -154,7 +157,7 @@
         <img src="../assets/svg/arrow.svg" alt="arrow">
       </button>
     </div>
-    <img loading="lazy" class="about__image" src="../assets/images/header__img.jpg" alt="Home Page-About-Jessie">
+    <img loading="lazy" class="about__image" src="../assets/images/header__img.webp" alt="Home Page-About-Jessie">
   </div>
 </section>
 
@@ -169,14 +172,14 @@
     </div>
     <div class="portfolio__grid">
       <div class="portfolio__grid-area area-a">
-        <img loading="lazy" class="portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img loading="lazy" class="portfolio__image" src="../assets/images/header__img.webp" alt="">
       </div>
       <div class="portfolio__grid-area area-b">
-        <img loading="lazy" class="portfolio__image portfolio__image--special" src="../assets/images/header__img.jpg"
+        <img loading="lazy" class="portfolio__image portfolio__image--special" src="../assets/images/header__img.webp"
           alt="">
       </div>
       <div class="portfolio__grid-area area-c">
-        <img loading="lazy" class="portfolio__image portfolio__image" src="../assets/images/header__img.jpg" alt="">
+        <img loading="lazy" class="portfolio__image portfolio__image" src="../assets/images/header__img.webp" alt="">
       </div>
     </div>
   </div>
@@ -272,10 +275,10 @@
     </button>
   </div>
   <div class="instagram__images">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
-    <img class="instagram__image" src="../assets/images/header__img.jpg" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
+    <img class="instagram__image" src="../assets/images/header__img.webp" alt="">
   </div>
   <div class="inline-padding btn-container">
     <button class="btn btn--icon cta instagram__btn instagram__btn--mobile mg-inline-auto inline-padding">
