--- a/public/services/index.html
+++ b/public/services/index.html
@@ -270,7 +270,7 @@
 </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-  <script src="/app.js"></script>
+  <script src="/app.js" type="module"></script>
 </body>
 
 </html>
