fix: update the text content of website

--- a/public/services/index.html
+++ b/public/services/index.html
@@ -8,7 +8,6 @@
   <title>Services</title>
   <link rel="preload" href="/style.css" as="style" />
   <link rel="preload" href="/app.js" as="script" />
-
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -17,7 +16,7 @@
   <nav class="navbar hidden navbar--desktop">
     <div class="container inline-padding container--navbar">
       <section class="navbar__logo">
-        <a href="/index.html">
+        <a href="/">
           <img src="/assets/svg/logoipsum.svg" alt="logo">
         </a>
       </section>
@@ -73,7 +72,6 @@
     <h1 class="hero-header__title animatedObj">Services</h1>
   </div>
 </section>
-
 <!-- service content -->
 <section class="container inline-padding services__types">
   <section class="services__type">
@@ -84,54 +82,51 @@
         <p class="service__number">01/</p>
         <h2 class="service__name">Wedding Look</h2>
         <p class="service__description">
-          With this package we will do a trial make up way in a advance your wedding day. Having a practice run
-          will
-          ensure you’re happy with the look you are going to have on your wedding day.
+          With this package we will do a trial make up way in a advance your wedding day. Having a practice run will ensure you’re
+          happy with the look you are going to have on your wedding day.
         </p>
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
             <span class="service__label">makeup</span>
-            <span class="service__info text-small">additional info(travel fee)...</span>
+            <span class="service__info text-small">Additional info(travel fee)...</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridal makeup</span>
+            <span class="service__pricetag">$300</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridesmaid</span>
+            <span class="service__pricetag">$170</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Groom</span>
+            <span class="service__pricetag">$100</span>
           </div>
         </div>
-
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
-            <span class="service__label">makeup</span>
+            <span class="service__label">hairstyle</span>
             <span class="service__info text-small">additional info(travel fee)...</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bride</span>
+            <span class="service__pricetag">$250</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridesmaid</span>
+            <span class="service__pricetag">$170</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Groom</span>
+            <span class="service__pricetag">$100</span>
           </div>
         </div>
-
       </div>
       <button class="btn btn--icon cta">
         <span>Schedule Consultation</span>
@@ -139,52 +134,75 @@
       </button>
     </div>
   </section>
-
   <section class="services__type">
     <img class="services__type-image" src="/assets/jessie_photos/portfolio-img1.webp" alt="<placeholder>">
     <div class="service">
       <hr class="service__line">
       <div class="service__text-section">
-        <p class="service__number">01/</p>
-        <h2 class="service__name">Wedding Look</h2>
+        <p class="service__number">02/</p>
+        <h2 class="service__name">Photoshoots</h2>
         <p class="service__description">
-          With this package we will do a trial make up way in a advance your wedding day. Having a practice run
-          will
-          ensure you’re happy with the look you are going to have on your wedding day.
+          We prep you for any type of photoshoot: family, maternity, professional, lifestyle, engagement and more. Feel confident
+          and beautiful with the look personalized for you!
         </p>
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
-            <span class="service__label">makeup</span>
-            <span class="service__info text-small">additional info(travel fee)...</span>
+            <span class="service__label">PRICE LIST</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Makeup</span>
+            <span class="service__pricetag">$200</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
-          </div>
-          <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Hairstyle</span>
+            <span class="service__pricetag">$170</span>
           </div>
         </div>
-
       </div>
-
       <button class="btn btn--icon cta">
         <span>Schedule Consultation</span>
         <img src="/assets/svg/arrow.svg" alt="arrow">
       </button>
     </div>
   </section>
-
+  <section class="services__type">
+    <img class="services__type-image" src="/assets/jessie_photos/portfolio-img1.webp" alt="<placeholder>">
+    <div class="service">
+      <hr class="service__line">
+      <div class="service__text-section">
+        <p class="service__number">03/</p>
+        <h2 class="service__name">Editorial Photoshoot</h2>
+        <p class="service__description">
+          Professional makeup and hairstyle for editorials photoshoot. I will do a makeup that will look outstanding on the
+          magazine, promotional advertisement, or social media. It’s time to create a perfect look for your brand or portfolio.
+        </p>
+      </div>
+      <div class="service__price-list">
+        <div class="service__price-listitem">
+          <div class="service__labelname">
+            <span class="service__label">PRICE LIST</span>
+          </div>
+          <hr class="service__line service__line--2">
+          <div class="service__labelname">
+            <span class="service__customer">Full look per model</span>
+            <span class="service__pricetag">from $300</span>
+          </div>
+          <div class="service__labelname">
+            <span class="service__customer">Full day</span>
+            <span class="service__pricetag">from $600</span>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn--icon cta">
+        <span>Schedule Consultation</span>
+        <img src="/assets/svg/arrow.svg" alt="arrow">
+      </button>
+    </div>
+  </section>
 </section>
-
 <section class="portfolio--secondary container inline-padding">
   <div class="portfolio__text-container">
     <h2 class="portfolio__title text-center">My clients</h2>
@@ -193,7 +211,9 @@
       <img src="/assets/svg/arrow.svg" alt="arrow">
     </button>
   </div>
-  <div class="portfolio__images">
+  <div
+    class="portfolio__images">
+    
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
@@ -229,38 +249,43 @@
 </section>
 </main>
   <footer id="contact" class="footer container inline-padding">
-  <hr class="footer__line">
+  <!--<hr class="footer__line">-->
+  <hr>
+  <!-- even space: composition utility class -->
   <div class="footer__container">
+    <!-- footer__content, nav-type: links -->
     <section class="footer-section">
-      <ul class="footer-section__list">
-        <li class="footer-section__item">
-          <a href="/index.html">Home</a>
+      <!-- this is just a list, at footer section, maybe not need to be so specific -->
+      <ul class="footer-section__list footer__list" data-type="navigation-links">
+        <li class="footer__item">
+          <a href="/" class="link" data-type="link-with-text">@Jessie</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/services">Services</a>
+        <li class="footer__item">
+          <a href="/services" class="link" data-type="link-with-text">Services</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/portfolio">Portfolio</a>
+        <li class="footer__item">
+          <a href="/portfolio" class="link" data-type="link-with-text">Portfolio</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/about">About Me</a>
+        <li class="footer__item">
+          <a href="/about" class="link" data-type="link-with-text">About Me</a>
         </li>
       </ul>
     </section>
-    <section class="footer-section socials__section">
-      <ul class="socials__list">
-        <li class="footer-section__item">
-          <a href="#" class="socials__link instagram">
+    <!-- footer__content, nav-type: social-links -->
+    <section class="footer-section socials__section" data-type="social-links">
+      <ul class="footer__list socials__list">
+        <li class="footer__item">
+          <a href="#" class="socials__link instagram link" data-type="link-with-image">
             <img src="/assets/svg/instagram.svg" alt="Connect with me on Instagram">
           </a>
         </li>
-        <li class="footer-section__item">
-          <a href="#" class="socials__link messenger">
+        <li class="footer__item">
+          <a href="#" class="socials__link messenger link" data-type="link-with-image">
             <img src="/assets/svg/messenger.svg" alt="Connect with me on Messenger">
           </a>
         </li>
-        <li class="footer-section__item">
-          <a href="#" class="socials__link whatsapp">
+        <li class="footer__item">
+          <a href="#" class="socials__link whatsapp link" data-type="link-with-image">
             <img src="/assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
           </a>
         </li>
@@ -272,5 +297,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="/app.js" type="module"></script>
 </body>
-
 </html>
