--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -8,7 +8,6 @@
   <title>Portfolio</title>
   <link rel="preload" href="/style.css" as="style" />
   <link rel="preload" href="/app.js" as="script" />
-
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -17,7 +16,7 @@
   <nav class="navbar hidden navbar--desktop">
     <div class="container inline-padding container--navbar">
       <section class="navbar__logo">
-        <a href="/index.html">
+        <a href="/">
           <img src="/assets/svg/logoipsum.svg" alt="logo">
         </a>
       </section>
@@ -200,38 +199,43 @@
 </section>
 </main>
   <footer id="contact" class="footer container inline-padding">
-  <hr class="footer__line">
+  <!--<hr class="footer__line">-->
+  <hr>
+  <!-- even space: composition utility class -->
   <div class="footer__container">
+    <!-- footer__content, nav-type: links -->
     <section class="footer-section">
-      <ul class="footer-section__list">
-        <li class="footer-section__item">
-          <a href="/index.html">Home</a>
+      <!-- this is just a list, at footer section, maybe not need to be so specific -->
+      <ul class="footer-section__list footer__list" data-type="navigation-links">
+        <li class="footer__item">
+          <a href="/" class="link" data-type="link-with-text">@Jessie</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/services">Services</a>
+        <li class="footer__item">
+          <a href="/services" class="link" data-type="link-with-text">Services</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/portfolio">Portfolio</a>
+        <li class="footer__item">
+          <a href="/portfolio" class="link" data-type="link-with-text">Portfolio</a>
         </li>
-        <li class="footer-section__item">
-          <a href="/about">About Me</a>
+        <li class="footer__item">
+          <a href="/about" class="link" data-type="link-with-text">About Me</a>
         </li>
       </ul>
     </section>
-    <section class="footer-section socials__section">
-      <ul class="socials__list">
-        <li class="footer-section__item">
-          <a href="#" class="socials__link instagram">
+    <!-- footer__content, nav-type: social-links -->
+    <section class="footer-section socials__section" data-type="social-links">
+      <ul class="footer__list socials__list">
+        <li class="footer__item">
+          <a href="#" class="socials__link instagram link" data-type="link-with-image">
             <img src="/assets/svg/instagram.svg" alt="Connect with me on Instagram">
           </a>
         </li>
-        <li class="footer-section__item">
-          <a href="#" class="socials__link messenger">
+        <li class="footer__item">
+          <a href="#" class="socials__link messenger link" data-type="link-with-image">
             <img src="/assets/svg/messenger.svg" alt="Connect with me on Messenger">
           </a>
         </li>
-        <li class="footer-section__item">
-          <a href="#" class="socials__link whatsapp">
+        <li class="footer__item">
+          <a href="#" class="socials__link whatsapp link" data-type="link-with-image">
             <img src="/assets/svg/whatsapp.svg" alt="Connect with me on Whatsapp">
           </a>
         </li>
@@ -243,5 +247,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <script src="/app.js" type="module"></script>
 </body>
-
 </html>
